# TOTEM

./: CMakeLists.txt  west.yml
.github/workflows/: build.yml
config/: keymap.yml  totem.keymap  totem.yaml  west.yml
config/boards/xiao_ble/: xiao_ble_wpm.yaml
config/shields/totem_left/: Kconfig.def.shield  Kconfig.shield  keymap.c  shield.cmake  totem_left.conf
config/shields/totem_right/: Kconfig.def.shield  Kconfig.shield  totem_right.conf  totem_right.keymap  totem_right.overlay
